--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.show-sql = true
 # Hibernate ddl auto (create, create-drop, update)
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=update
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
