--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,10 +15,19 @@ spring.datasource.validationQuery = SELECT 1
 # Show or not log for each sql query
 spring.jpa.show-sql = true
 
+
+#to show sql
+spring.jpa.properties.hibernate.show_sql=true
+#formatting
+spring.jpa.properties.hibernate.format_sql=true
+#printing parameter values in order
+logging.level.org.hibernate.type.descriptor.sql=trace
+
+
 # Hibernate ddl auto (create, create-drop, update)
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 
 # Naming strategy
 spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
@@ -27,6 +36,7 @@ spring.jpa.hibernate.naming-strategy = org.hibernate.cfg.ImprovedNamingStrategy
 # stripped before adding them to the entity manager)
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
+#spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
 
 # Enable all endpoints
@@ -34,4 +44,3 @@ management.endpoints.web.exposure.include=*
 
 #Spring serializer
 spring.jackson.serialization.fail-on-empty-beans=false
-
